--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
@@ -1,5 +1,16 @@
 <Text sx={{ fontSize: [4, 5, 6], fontWeight: `bold`, color: `heading` }}>
-  Hi.
+  안녕하세요
+  <Text sx={{ fontSize: [4, 5, 6], fontWeight: `bold`, color: `#7b68ee` }}>
+    ,
+  </Text>
+  <br />
+  프론트엔드 개발자 김하연입니다
+  <Text sx={{ fontSize: [4, 5, 6], fontWeight: `bold`, color: `#7b68ee` }}>
+    .
+  </Text>
 </Text>
-
-I'm LekoArts, your theme creator. I'm passionate about open source & teaching. Learn more about Gatsby & React on [my website](https://www.lekoarts.de?utm_source=minimal-blog&utm_medium=Starter).
+<br />
+<br />
+<Text sx={{ fontSize: [2, 3, 4], fontWeight: `bold`, color: `heading` }}>
+  “빠른 코드 이해력, 소통하는 협업 능력, 효율적이고 가독성이 좋은 코드”
+</Text>
